almost done first part, 70 percent of finish